    compress data where having an index/pseries is useless and misleading).
  * pvcm object: element 'residuals' is now of class c("pseries", "numeric") 
    (were: "numeric" for within, "matrix" with one column for random model);
    element 'df.residuals' renamed to 'df.residual' (cf. lm, plm, ...).
  * print.pseries: prettier printing for c("pseries", "complex").
  * pgrangertest: better detection of infeasibility if a series is too short.
  * plm object: gained element 'weights' if weighted estimation was performed.
  * pgmm object: removed element 'df.residual' for now as it contained the
    function of the same name rather than a number.
  * plm/ercomp: case of non-estimable 'amemiya' model due to variables lacking
    within variation in individual or time dimension gives informative error.


Changes in version 1.6-6

  * ercomp:
      * re-written to be a more general framework.
      * (internal) returned ercomp object: component 'sigma2' is now a numeric;
        component 'theta' is now either a numeric (balanced models) or a list with 
        numerics (unbalanced models), the numerics being of length 1 (one-way models)
        or of length equal to the number of observations (two-ways models).
  * model.matrix.*: gained new argument 'cstcovar.rm' to remove specific columns.
  * pmodel.response: now returns object of class c("pseries", "numeric") [was "numeric"].
  * plm:
      * random effect models: some random methods extended to unbalanced 
        two-ways case (Nerlove's method only supports balanced one-way, two-ways),
        thanks to the more general ercomp framework.
      * nested random effects model implemented (Baltagi/Song/Jung (2001)),
        use effect = "nested", see example in ?plm.
      * two-way fixed effects model for unbalanced panels is faster.
      * new argument 'weights' added.
      * fix backward compatibility for the (deprecated!) argument 'instruments'